# CubicLauncher

./: .gitignore  Cargo.toml  README.md  package.json
crates/aqua/: Cargo.toml
crates/aqua/examples/: download.rs
crates/aqua/src/: lib.rs
crates/aqua/src/downloaders/: batch.rs  fabric.rs  forge.rs  minecraft.rs  mod.rs
crates/aqua/src/errors/: mod.rs
crates/cubrinth/: Cargo.toml
crates/cubrinth/src/: lib.rs
crates/cubrinth/src/mrpack/: installer.rs  mod.rs  pack_format.rs
crates/launchwerk/: Cargo.toml
crates/launchwerk/src/: handle.rs
crates/zellkern/: Cargo.toml
crates/zellkern/src/: forge.rs  launch_config.rs  lib.rs  loader.rs  manifest.rs  version.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: auth.rs  discord.rs  download.rs  forge.rs  ftb.rs  instance.rs  java.rs  mod.rs  modrinth.rs  others.rs  pack.rs  settings.rs  themes.rs
src-tauri/src/core/: event_bus.rs  http_client.rs
src-tauri/src/services/: addon_manager.rs  discord_presence.rs  download_queue.rs  instance_manager.rs  java_manager.rs  launcher.rs  mod.rs  settings_manager.rs
src/lib/api/: cubicApi.ts  launcherService.ts  themeManager.ts  updaterServices.ts
src/lib/i18n/: de.json  en.json  es.json  fr.json  index.ts
src/lib/icons/: CheckIcon.svelte  ChevronDownIcon.svelte  ChevronIcon.svelte  CloseIcon.svelte  CopyIcon.svelte  DownloadIcon.svelte
src/lib/state/: state.svelte.ts
src/lib/types/: types.ts
src/routes/: +page.svelte
src/styles/: App.css
src/styles/shared/: components.css  reset.css  welcome.css
(+39 files in other folders)
